resources/static/styles/petition.css
body {
  font: 400 16px/24px 'open_sansregular', arial, sans-serif;
  margin: 0;
}

header {
  background-color: #bcf9c7;
  padding: 1em;
  margin-bottom:1em;
}

footer {
  background-color: #6f6e72;
  color:#fff;
  height:100px;
  margin-top:1em;
}

h1 {
  margin: 0 0 .5em;
  font: 300 44px/46px 'open_sanslight', arial, sans-serif;
  color: #1a9931;
}

h2 {
  margin: 0 0 .5em;
  font: 300 30px/34px 'open_sanslight', arial, sans-serif;
  color: #63ab42;
  text-align: center;
  letter-spacing: .05em;
}

.h2 {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

h3 {
  margin-top:.5em;
  margin-bottom:.3em;
}

th {
  text-align:left;
  vertical-align:top;
  font-weight: bold;
}

td {
  vertical-align:top;
}

ul {
  margin: 0;
  padding-left: 1em;
  list-style-image:url(/static/images/blue-arrow-right.png);
}

input[type=text],
input[type=email],
input[type=password] {
  display: block;
  width: 93%;
  padding: .5em;
  font: 400 14px/14px 'open_sansregular', arial, sans-serif;
  color: #000;
  border: 1px solid #929292;
}

input[type=submit] {
  display: block;
  width: 97%;
  padding: .5em;
  font: 400 17px/28px 'open_sansregular', arial, sans-serif;
  color: #fff;
  background-color: #4fa6d0;
  border-width: 0;
}

input[type=submit]:hover {
  background-color: #7ec066;
}

input[type=checkbox] {
  display:inline-block;
  width: 3%;
  margin-left: 0;
  margin-right: 1em;
}

label[for] {
  display:inline-block;
  width: 90%;
  vertical-align:top;
}

.sticky {
  position: sticky;
  top: 1em;
  overflow: hidden;
}

section {
  margin-left: 1em;
  margin-right: 1em;
}

#petition-intro,
#petition,
#petition-details {
  display: flex;
  flex-wrap: wrap;
}

#petition-intro-image {
  flex: 1 1 30%;
  margin-right: 1em;
  vertical-align: top;
  min-width: 250px;
  max-width: 500px;
}

#petition-intro-text {
  flex: 1 1 50%;
  vertical-align: top;
  font: 300 20px/30px 'open_sanslight', arial, sans-serif;
}

#petition-intro-counter {
  font:600 20px/21px 'open_sansregular', arial, sans-serif;
}

#petition-text,
#petition-form,
#petition-details-text,
#petition-details-history {
  flex: 1 1 40%;
  margin-top:1em;
  padding:1em 2em 2em 2em;
  background-color: #f5f5f5;
}

#petition-form {
  background-image:url(/static/images/signature-form-background.gif);
  background-repeat:repeat-y;
  padding-bottom: 1em;
}

#petition-form-iframe {
  width: 100%;
  height: 100%;
  border-width: 0;
}

#petition-details {
  margin-right: 0;
}

#petition-details-text {
  margin-right: 1em;
}

#petition-details-text h2 {
 color: #726f82;
}

#petition-details-history {
  margin-right: 1em;
  background-color: #bcf9c7;
}

#petition-details-history h2 {
 color: #1ba734;
}

#petition-details-history-graph {
  width:100%;
  min-width: 250px;
  max-width: 500px;
}

